final editors comments taken into account

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -166,19 +166,21 @@ This paper is licensed under the CC Attribution license.}
 
 В статье представлен краткий обзор методов и алгоритмов, применяемых для разрешения лексической многозначности. Эти методы используют различный математический и алгоритмический аппарат для решения WSD-задачи: нейронные сети, адаптивный алгоритм улучшения точности обучения AdaBoost, построение лексических цепочек, методы на основе применения теоремы Байеса и методы кластеризации контекстных векторов и семантически близких слов. Работу завершает исследование, в котором сравниваются время обучения, время работы и результаты работы разных алгоритмов решения WSD-задачи.
 
-Работа Старковой В.Г. поддержана грантом РГНФ (проект № 15-04-12029), работа Кириллова А.Н. и Чирковой Ю.В. поддержана грантом РГНФ (проект № 15-04-12006). Работа Крижановского А. А. выполнена при частичной финансовой поддержке Программы фундаментальных исследований Секции литературы и языка ОИФН РАН «Язык  и информационные технологии» 2015-2017 (проект «Корпус вепсского языка: разработка и формирование морфологической базы электронного ресурса»).
+Работа В.~Г.~Старковой поддержана грантом РГНФ (проект № 15-04-12029), работа А.~Н.~Кириллова и Ю.~В.~Чирковой поддержана грантом РГНФ (проект № 15-04-12006). Работа А.~А.~Крижановского выполнена при частичной финансовой поддержке Программы фундаментальных исследований Секции литературы и языка ОИФН РАН «Язык  и информационные технологии» 2015-2017 (проект «Корпус вепсского языка: разработка и формирование морфологической базы электронного ресурса»).
+ 
+ \newpage
  
 \begin{thebibliography}{9}
 
 \bibitem{Averin 2006}
-\textit{Аверин А. Н.} Разработка сервиса поиска биграмм // Труды международной конференции «Корпусная лингвистика–2006. СПб., С.Петерб. ун-та., 2006. С. 5~ - 15.
+\textit{Аверин А. Н.} Разработка сервиса поиска биграмм // Труды международной конференции <<Корпусная лингвистика 2006>>. СПб., С.Петерб. ун-та., 2006. С. 5--15.
 
 \bibitem{epr:website}
 \textit{Епрев А. С.} Применение контекстных векторов в классификации текстовых документов // 
 “Журнал радиоэлектроники”.   2010. N 10. URL: http://jre.cplire.ru/iso/oct10/1/text.html (дата обращения: ).
 
 \bibitem{Kim 1989}
-\textit{Ким Дж. О., Мьюллер Ч. У., Клекка У. Р.} Факторный, дискриминантный и кластерный анализ / <<Финансы и статистика>>, Москва, Россия. 1989. Стр.172.
+\textit{Ким~Дж.~О., Мьюллер~Ч.~У., Клекка~У.~Р.} Факторный, дискриминантный и кластерный анализ / <<Финансы и статистика>>, Москва, Россия. 1989. Стр.172.
 
 \bibitem{Lukash 2011}
 \textit{Лукашевич Н. В.} Тезаурусы в задачах информационного поиска / Издательство МГУ, 2011. 495 с.
@@ -187,37 +189,37 @@ This paper is licensed under the CC Attribution license.}
 \textit{Марманис~Х., Бабенко Д.} Алгоритмы интеллектуального Интернета. Передовые методики сбора, анализа и обработки данных. – Пер. с англ. – СПб.: Символ-Плюс, 2011. 480 с.
 
 \bibitem{Paclin}
-\textit{Паклин~Н.~Б., Орешков~В.~И.}Бизнес-аналитика: от данных к знаниям: Учебное пособие. 2-е изд., испр. --- СПб.: Питер, 2013. --- 704~с.
+\textit{Паклин~Н.~Б., Орешков~В.~И.} Бизнес-аналитика: от данных к знаниям: Учебное пособие. 2-е изд., испр. СПб.: Питер, 2013. 704~с.
 
 \bibitem{Trudakov 2010}
-\textit{Турдаков Д. Ю.} Методы и программные средства разрешения лексической многозначности терминов на основе сетей документов: дис. … канд. физико-математических наук:  Москва, 2010.  138 c.
+\textit{Турдаков Д. Ю.} Методы и программные средства разрешения лексической многозначности терминов на основе сетей документов: дис. \ldots\ канд. ф.-м. наук:  Москва, 2010.  138 c.
 
 \bibitem{Abney 1999}
-\textit{Abney S. and Light M.} Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999.
+\textit{Abney S., Light M.} Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999.
 
 \bibitem{Azzini}
-\textit{Azzini A., da Costa Pereira C., Dragoni M. and Tettamanzi A. G. B.} Evolving Neural Networks for Word Sense Disambiguation // 8-th International conference on hybrid intelligent systems. Spain. Barcelona, 2008. P. 332–337. doi: 10.1109/HIS.2008.88
+\textit{Azzini~A., da Costa Pereira~C., Dragoni~M., Tettamanzi~A.~G.~B.} Evolving Neural Networks for Word Sense Disambiguation // 8-th International conference on hybrid intelligent systems. Spain. Barcelona, 2008. P. 332–337. doi: 10.1109/HIS.2008.88
 
 \bibitem{Barzilay Elhadad 1997}
-\textit{Barzilay R. and  Elhadad M. }Using lexical chains for text summarization // In Proceedings of the ACL Workshop on Intelligent Scalable Text Summarization (Madrid, Spain). 1997. P. 10–17.
+\textit{Barzilay~R., Elhadad~M.} Using lexical chains for text summarization // In Proceedings of the ACL Workshop on Intelligent Scalable Text Summarization (Madrid, Spain). 1997. P. 10--17.
 
 \bibitem{Berry 1993}
-\textit{Berry M.,  Do T.,  O’Brien G.,  Krishna V. and Varadhan S. }SVDPACK (version 1.0) user’s guide. Technical Report CS-93-194, University of Tennessee at Knoxville, Computer Science Department, April 1993.
+\textit{Berry~M., Do~T.,  O’Brien~G.,  Krishna~V., Varadhan~S.} SVDPACK (version 1.0) user’s guide. Technical Report CS-93-194, University of Tennessee at Knoxville, Computer Science Department, April 1993.
 
 \bibitem{Breiman}
-\textit{L.~Breiman.} Arcing classifiers. The Annals of Statistics. Vol 26 (3), 1998, pp. 801–849.
+\textit{Breiman~L.} Arcing classifiers. The Annals of Statistics. 1998. Vol. 26, N 3. P. 801--849.
 
 \bibitem{Bruce 1994}
-\textit{Bruce R. and  Wiebe J. }Word-sense disambiguation using decomposable models // In Proceedings of the 32nd Annual Meeting of the Association for Computational Linguistics, 1994. P. 139–146. doi: 10.3115/981732.981752
+\textit{Bruce~R.,  Wiebe~J.} Word-sense disambiguation using decomposable models // In Proceedings of the 32nd Annual Meeting of the Association for Computational Linguistics, 1994. P. 139--146. doi: 10.3115/981732.981752
 
 \bibitem{Wu}
-\textit{Carpuat M. and Wu D.} Evaluating the word sense disambiguation performance of statistical machine translation. In Proceedings of the second international joint conference on natural language processing (IJCNLP), 2005, pp. 122–127. URL: http://www.aclweb.org/anthology/I05-2021
+\textit{Carpuat~M., Wu~D.} Evaluating the word sense disambiguation performance of statistical machine translation. In Proceedings of the second international joint conference on natural language processing (IJCNLP), 2005, pp. 122–127. URL: http://www.aclweb.org/anthology/I05-2021 (дата обращения: 20.08.2015).
 
 \bibitem{Ciaramita 2000}
-\textit{Ciaramita M. and  Johnson M.} Explaining away ambiguity: Learning verb selectional preference with Bayesian networks. In Proceedings of the 18th conference on Computational linguistics, vol. 1, 2000, pp. 187–193.
+\textit{Ciaramita~M., Johnson~M.} Explaining away ambiguity: Learning verb selectional preference with Bayesian networks. In Proceedings of the 18th conference on Computational linguistics, 2000. Vol.~1. P. 187--193.
 
 \bibitem{COTTRELL 1983}
-\textit{Cottrell G. W. and  Small S. L. }A connectionist  scheme for modelling word  sense  disambiguation // Cognition and brain theory. 1983. № 6. P. 89–120. 
+\textit{Cottrell~G.~W., Small~S.~L.} A connectionist  scheme for modelling word  sense  disambiguation // Cognition and brain theory. 1983. N~6. P.~89--120. 
 
 \bibitem{COTTRELL 1989}
 \textit{Cottrell G. W. }A connectionist approach to word sense disambiguation / Pitman, London, 1989.
@@ -226,7 +228,7 @@ This paper is licensed under the CC Attribution license.}
 \textit{Duong D. T. }Automated text summarization. Graduation Thesis. Hanoi University. 2011. 
 
 \bibitem{Donald 1990}
-\textit{Hindle D. }Noun classification from predicate-argument structures // In Proceedings of ACL-90, Pittsburg, Pennsylvania, June, 1990. P. 268-275.
+\textit{Hindle D.} Noun classification from predicate-argument structures // In Proceedings of ACL-90, Pittsburg, Pennsylvania, June, 1990. P. 268--275.
 
 %\bibitem{Charles 1993}
 %\textit{Ling Charles X.,  Marinov M. }Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs,  %Cognition, Elsevier, 1993.
@@ -247,77 +249,77 @@ This paper is licensed under the CC Attribution license.}
 %\textit{Duong D. T. }Automated text summarization. Graduation Thesis. Hanoi University. 2011. 
 
 \bibitem{esc1}
-\textit{Escudero G., M\`{a}rquez L. and Rigau G.} Using LazyBoosting for word sense disambiguation. 
-In Proceedings of the Second International Workshop on evaluating Word Sense Disambiguation Systems. Toulouse, France, 2001, pp. 71–74.
+\textit{Escudero~G., M\`{a}rquez~L., Rigau~G.} Using LazyBoosting for word sense disambiguation. 
+In Proceedings of the Second International Workshop on evaluating Word Sense Disambiguation Systems. Toulouse, France, 2001, pp. 71--74.
 
 \bibitem{esc2}
-\textit{Escudero G., M\`{a}rquez L. and Rigau G.} Boosting Applied to Word Sense Disambiguation. In Proceedings of the 12th 
+\textit{Escudero~G., M\`{a}rquez~L., Rigau~G.} Boosting Applied to Word Sense Disambiguation. In Proceedings of the 12th 
 European Conference on Machine Learning, ECML. Barcelona, Catalonia. 2000. 
 
 \bibitem{Freund 1999}
-\textit{Freund Y., Schapire R. E. }A Short Introduction to Boosting // AT\&T Labs Research, Shannon Laboratory.  1999.
+\textit{Freund~Y., Schapire~R.~E.} A Short Introduction to Boosting // Journal of Japanese Society for Artificial Intelligence, 1999. Vol.~14, N~5. P.~771--780.
 
 \bibitem{Freund 1996}
-\textit{Freund Y.,  Schapire R. E. }Game theory, on-line prediction and boosting // In Proceedings of the Ninth Annual Conference on Computational Learning Theory,  1996. P. 325-332.
+\textit{Freund Y.,  Schapire R. E.} Game theory, on-line prediction and boosting // In Proceedings of the Ninth Annual Conference on Computational Learning Theory, 1996. P. 325--332.
 
 \bibitem{Freund 1997}
-\textit{Freund Y.,  Schapire R. E. }A decision-theoretic generalization of on-line learning and an application to boosting // Journal of Computer and System Sciences. 1997. P. 119–139. doi: 10.1006/jcss.1997.1504
+\textit{Freund Y.,  Schapire R. E.} A decision-theoretic generalization of on-line learning and an application to boosting // Journal of Computer and System Sciences. 1997. P. 119–139. doi: 10.1006/jcss.1997.1504
 
 \bibitem{Halliday Hasan 1976}
-\textit{Halliday M. and  Hasan R. }Cohesion in English / London: Longman. 1976. 
+\textit{Halliday~M., Hasan~R.} Cohesion in English / London: Longman, 1976. 
 
 \bibitem{Harris 1985}
-\textit{Harris Z. }Distributional structure / In: Katz, J. J. (ed.) The Philosophy of Linguistics. New York: Oxford University Press. 1985. P. 26–47
+\textit{Harris~Z.} Distributional structure // In: Katz~J.~J. (ed.) The Philosophy of Linguistics. New York: Oxford University Press, 1985. P. 26--47.
 
 \bibitem{Hearst 1994}
-\textit{Hearst M. }Multi-paragraph segmentation of expository text // In Proceedings of the 32th Annual Meeting of the Association for Computational Linguistics, 9–16. Las Cruces, New Mexico: Association for Computational Linguistics. 1994. doi: 10.3115/981732.981734
+\textit{Hearst~M.} Multi-paragraph segmentation of expository text // In Proceedings of the 32th Annual Meeting of the Association for Computational Linguistics, 9--16. Las Cruces, New Mexico: Association for Computational Linguistics. 1994. doi: 10.3115/981732.981734
 
 \bibitem{Hinton 1986}
-\textit{Hinton G. E.,  McClelland J. L.,  Rumelhart D. E.} Distributed representations // In Parallel Processing: explorations in the microstructure of cognition. MIT Press, Cambridge, MA, 1986. P. 5–44.
+\textit{Hinton~G.~E.,  McClelland~J.~L.,  Rumelhart~D.~E.} Distributed representations // In Parallel Processing: explorations in the microstructure of cognition. MIT Press, Cambridge, MA, 1986. P.~5--44.
 
 \bibitem{Hirst St-Onge 1998}
-\textit{Hirst G. and  St-Onge D. }Lexical chains as representations of context for the detection and correction of malapropisms. WordNet: An electronic lexical database, 1998. P. 305-332.
+\textit{Hirst~G., St-Onge~D.} Lexical chains as representations of context for the detection and correction of malapropisms. WordNet: An electronic lexical database, 1998. P. 305--332.
 
 \bibitem{Hoey 1991}
-\textit{Hoey M. }Patterns of Lexis in Text / Oxford: Oxford University Press. 1991. 
+\textit{Hoey M.} Patterns of Lexis in Text / Oxford: Oxford University Press, 1991. 
 
 \bibitem{Jain 1988}
-\textit{Jain A. and  Dubes R. }Algorithms for Clustering Data / Prentice-Hall, Inc., Upper Saddle River, NJ, 1988.
+\textit{Jain~A., Dubes~R.} Algorithms for Clustering Data / Prentice-Hall, Inc., Upper Saddle River, NJ, 1988.
 
 \bibitem{Jain 1999}
-\textit{Jain A.,  Murthy M. and  Flynn P. }Data clustering: a review // ACM Computing Surveys, 31(3):264-323, September 1999. doi: 10.1145/331499.331504
+\textit{Jain~A., Murthy~M., Flynn~P.} Data clustering: a review // ACM Computing Surveys, 1999. Vol.~31, N.~3. P.~264--323. doi: 10.1145/331499.331504
 
 \bibitem{Leacock 1993}
-\textit{Leacock C.,  Towell G. and  VoorheesE. }Corpus-based statistical sense resolution // In Proceedings of the ARPA Workshop on Human Language Technology, March. 1993, P. 260–265.  
+\textit{Leacock~C., Towell~G., Voorhees~E.} Corpus-based statistical sense resolution // In Proceedings of the ARPA Workshop on Human Language Technology, 1993. P. 260--265.  
 
 \bibitem{LESK 1986}
 \textit{Lesk M. }Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone //  Proceedings  of  the 5th SIGDOC. New York. 1986. P. 24–26. doi: 10.1145/318723.318728
 
 \bibitem{Dekang 1998}
-\textit{Lin D. }Automatic Retrieval and Clustering of Similar Words // Proceedings of the 17th international conference on Computational linguistics-Vol. 2. –  Department of Computer Science University of Manitoba Winnipeg, Manitoba, Canada, 1998, P. 768-774. doi: 10.3115/980432.980696
+\textit{Lin~D.} Automatic Retrieval and Clustering of Similar Words // Proceedings of the 17th International Conference on 
+Computational linguistics. University of Manitoba, Manitoba, Canada, 1998. Vol.~2. P.~768--774. doi: 10.3115/980432.980696
 
 \bibitem{Dekang 1993}
-\textit{Lin D. }Principle-based parsing without overgeneration // In Proceedings of ACL-93, Columbus, Ohio, 1993, P. 112-120. doi: 10.3115/981574.981590
+\textit{Lin D. }Principle-based parsing without overgeneration // In Proceedings of ACL-93, Columbus, Ohio, 1993. P.~112--120. doi: 10.3115/981574.981590
 
 \bibitem{Dekang 1997}
-\textit{Lin D. }Using syntactic dependency as local context to resolve word sense ambiguity // In Proceedings of ACL/EACL-97, Madrid, Spain, July, 1997, P. 64-71. doi: 10.3115/979617.979626
-
+\textit{Lin D.} Using syntactic dependency as local context to resolve word sense ambiguity // In Proceedings of ACL/EACL-97, Madrid, Spain, 1997. P.~64--71. doi: 10.3115/979617.979626
 
 \bibitem{Lin 2001}
-\textit{Lin D. and Pantel P. }Induction of semantic classes from natural language text // In Proceedings of SIGKDD-01. San Francisco, CA. 2001. P. 317–322. doi: 10.1145/502512.502558  
+\textit{Lin~D., Pantel~P.} Induction of semantic classes from natural language text // In Proceedings of SIGKDD-01. San Francisco, CA. 2001. P.~317--322. doi: 10.1145/502512.502558  
 
 \bibitem{Charles 1993}
 \textit{Ling Charles X.,  Marinov M. }Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs /  Cognition, Elsevier, 1993.
 
 
 \bibitem{Manning 1999}
-\textit{Manning C. D. and  Sch\"utze H. }Foundations of Statistical Natural Language Processing / MIT Press. 1999.
+\textit{Manning~C.~D., Sch\"utze~H.} Foundations of Statistical Natural Language Processing / MIT Press, 1999.
 
 \bibitem{Merz 1998}
-\textit{Merz C. J. and  Murphy P. M. }UCI repository of machine learning databases, 1998. URL: www.ics.uci.edu/ mlearn/MLRepository.html (дата обращения: 24.04.2015).
+\textit{Merz~C.~J., Murphy~P.~M.} UCI repository of machine learning databases, 1998. URL: www.ics.uci.edu/ mlearn/MLRepository.html (дата обращения: 24.04.2015).
 
 \bibitem{Miller 1990}
-\textit{Miller G. }Wordnet: An on-line lexical database // International Journal of Lexicography, 3(4). 1990.
+\textit{Miller G.} Wordnet: An on-line lexical database // International Journal of Lexicography, 1990. Vol.~3, N.~4.
 
 \bibitem{Mooney 1996}
 \textit{Mooney R. J. }Comparative Experiments on Disambiguating Word Senses:
@@ -327,66 +329,65 @@ An Illustration of the Role of Bias in Machine Learning / Department of Computer
 \textit{Mooney R. J., Califf M. E. }Induction of First-Order Decision Lists: Results on Learning the Past Tense of English Verbs / Department of Computer Sceinces, University of Texas, Austin, TX 78712-1188, 1995.
 
 \bibitem{Morris Hirst 1991}
-\textit{Morris J. and  Hirst G. }Lexical cohesion computed by thesaural relations as an indicator of the structure of text // Computational Linguistics 17(1):21–43. 1991. 
+\textit{Morris~J., Hirst~G.} Lexical cohesion computed by thesaural relations as an indicator of the structure of text // Computational Linguistics, 1991. Vol.~17, N.~1. P.~21--43.
 
 \bibitem{Navigli 2009}
-\textit{Navigli R. }Word sense disambiguation: A survey. ACM Computing Surveys (CSUR) 41, no. 2 (2009): 10. doi: 10.1145/1459352.1459355
+\textit{Navigli~R.} Word sense disambiguation: A~survey. ACM Computing Surveys (CSUR), 2009. Vol.~41, N.~2. doi: 10.1145/1459352.1459355
 
 \bibitem{Eugene 1975}
-\textit{Nida Eugene A. }Componential Analysis of Meaning / The Hague, Mouton. 1975.
-
+\textit{Nida Eugene A.} Componential Analysis of Meaning / The Hague, Mouton, 1975.
 
 \bibitem{Pantel 2002}
-\textit{Pantel P.,  Lin D. }Discovering Word Senses from Text / University of Alberta. Department of Computing Science Edmonton, Alberta T6H 2E1 Canada, 2002. doi: 10.1145/775047.775138
+\textit{Pantel P.,  Lin D.} Discovering Word Senses from Text / University of Alberta. Department of Computing Science Edmonton, Alberta T6H 2E1 Canada, 2002. doi: 10.1145/775047.775138
 
 \bibitem{Pedersen 2000}
-\textit{Pedersen T. }A Simple Approach to Building Ensembles of Naive Bayesian Classifers for Word Sense Disambiguation / Department of Computer Science, University of Minnesota Duluth. 2000.
+\textit{Pedersen T.} A Simple Approach to Building Ensembles of Naive Bayesian Classifers for Word Sense Disambiguation / Department of Computer Science, University of Minnesota Duluth, 2000.
 
 \bibitem{Pedersen 1997}
-\textit{Pedersen T. and  Bruce R. }Distinguishing word senses in untagged text / Proc.EMNLP.Providence, RI, 1997.
+\textit{Pedersen~T., Bruce~R.} Distinguishing word senses in untagged text // Proceedings of the Second Conference on Empirical Methods in Natural Language Processing, 1997.
 
 \bibitem{Purandare 2004}
-\textit{ Purandare A. and  Pedersen T. }Improving word sense discrimination with gloss augmented feature vectors // Workshop on Lexical Resources for the Web and Word Sense Disambiguation.  2004.  P. 123-130. 
+\textit{Purandare~A., Pedersen~T.} Improving word sense discrimination with gloss augmented feature vectors // Workshop on Lexical Resources for the Web and Word Sense Disambiguation, 2004. P.~123--130. 
 
 \bibitem{Quinlan 1993}
 \textit{Quinlan J. R. }C4.5: Programs for Machine Learning / Morgan Kaufmann, 1993. 
 
 \bibitem{Resnik 1997}
-\textit{Resnik P. }Selectional preference and sense disambiguation / In Proceedings of the ANLP-97 Workshop: Tagging Text with Lexical Semantics: Why, What, and How? 1997.
+\textit{Resnik~P.} Selectional preference and sense disambiguation / In Proceedings of the ANLP-97 Workshop: Tagging Text with Lexical Semantics: Why, What, and How? 1997.
 
 \bibitem{Savova 2005}
-\textit{Savova G., Pedersen T., Purandare A., Kulkarni A. }Resolving ambiguities in biomedical text with unsupervised clustering approaches / University of Minnesota Supercomputing Institute Research Report, 2005.
+\textit{Savova~G., Pedersen~T., Purandare~A., Kulkarni~A.} Resolving ambiguities in biomedical text with unsupervised clustering approaches / University of Minnesota Supercomputing Institute Research Report, 2005.
 
 \bibitem{schapire99}
-\textit{Schapire R. E. and Singer Y.} Improved Boosting Algorithms Using Confidence-rated Predictions. 
-Machine Learning, vol. 37(3), 1999, pp. 297–336.
+\textit{Schapire~R.~E., Singer~Y.} Improved Boosting Algorithms Using Confidence-rated Predictions. 
+Machine Learning, 1999. Vol.~37, N.~3. P.~297--336.
 
 \bibitem{Schapire 1998}
-\textit{Schapire R. E. and Singer Y. }Improved boosting a predictions // In Proceedings of the Eleventh Annual Confere Theory, 1998. P. 80–91. 
+\textit{Schapire~R.~E., Singer~Y.} Improved boosting a predictions // In Proceedings of the Eleventh Annual Conference Theory, 1998. P.~80--91. 
 
 \bibitem{Schapire 1997}
-\textit{Schapire R. E. }Using output codes to boost multiclass learning problems. In Machine Learning // Proceedings of the Fourteenth International Conference, 1997. P. 313–321. 
+\textit{Schapire~R.~E.} Using output codes to boost multiclass learning problems. In Machine Learning // Proceedings of the Fourteenth International Conference, 1997. P.~313--321. 
 
 \bibitem{Schutze 1998}
-\textit{Sch$\ddot{u}$tze H. }Automatic Word Sense Discrimination // Computational Linguistics, vol. 24, number 1., 1998.
+\textit{Sch$\ddot{u}$tze H. }Automatic Word Sense Discrimination // Computational Linguistics, 1998. Vol.~24, N.~1.
 
 \bibitem{SC:website}
-\textit{SenseClusters. }  \newline URL: http://senseclusters.sourceforge.net (дата обращения: 24.04.2015).
+\textit{SenseClusters.}  \newline URL: http://senseclusters.sourceforge.net (дата обращения: 24.04.2015).
 
 \bibitem{UMLS:website}
-\textit{UMLS Terminology Services (UTS).} URL: http://umlsks.nlm.nih.gov/kss/servlet/Turbine/\newline template (дата обращения: 22.04.2015)
+\textit{UMLS Terminology Services (UTS).} URL: http://umlsks.nlm.nih.gov/kss/servlet/Turbine/\newline template (дата обращения: 22.04.2015).
 
 \bibitem{VERONIS 1990}
-\textit{Veronis J. and Ide N. }Word  sense  disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries // Proceedings of the 13th International Conference on Computational Linguistics. Helsinki. 1990. P. 389–394. doi: 10.3115/997939.998006
+\textit{Veronis~J., Ide~N.} Word sense disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries // Proceedings of the 13th International Conference on Computational Linguistics. Helsinki, 1990. P.~389--394. doi: 10.3115/997939.998006
 
 \bibitem{WALTZ 1985}
-\textit{Waltz D. L. and  Pollack J. B. }Massively parallel parsing: a strongly interactive  model  of  natural  language interpretation // Cognitive science. 1985. № 9. P. 51–74. doi: 10.1207/s15516709cog0901\_4
+\textit{Waltz~D.~L., Pollack~J.~B.} Massively parallel parsing: a strongly interactive  model  of  natural  language interpretation // Cognitive science, 1985. N.~9. P.~51--74. doi: 10.1207/s15516709cog0901\_4
                      
 \bibitem{Weeber 2001}
-\textit{Weeber M.,  Mork J.,  Aronson A. }Developing a test collection for biomedical word sense disambiguation / Proc. AMIA., 2001.
+\textit{Weeber~M.,  Mork~J.~G., Aronson~A.~R.} Developing a test collection for biomedical word sense disambiguation // In Proceedings of the AMIA Symposium, Chicago, 2001. P.~746--750.
 
 \bibitem{Zhao 2002}
-\textit{Zhao Y. and  Karypis G. }Evaluation of hierarchical clustering algorithms for document datasets // In Proceedings of the 11th International Conference on Information and Knowledge Management, McLean, VA, 2002. P. 515-524. doi: 10.1145/584792.584877
+\textit{Zhao~Y., Karypis~G.} Evaluation of hierarchical clustering algorithms for document datasets // In Proceedings of the 11th International Conference on Information and Knowledge Management, McLean, VA, 2002. P. 515--524. doi: 10.1145/584792.584877
 
 \end{thebibliography}
 \end{articletext}
@@ -399,7 +400,7 @@ Machine Learning, vol. 37(3), 1999, pp. 297–336.
 Студентка\\
 Математический факультет\\ 
 Петрозаводский государственный университет\\
-пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+пр. Ленина, 33, Петрозаводск, Республика Карелия\\
 тел.: (8142) 711078\\
 эл. почта: merilstreet@mail.ru
 
@@ -407,7 +408,7 @@ Machine Learning, vol. 37(3), 1999, pp. 297–336.
 
 \authorsname{Kaushinis, Tatiana}
 Petrozavodsk State University\\
-33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: merilstreet@mail.ru
 \end{aboutauthors}
@@ -435,7 +436,7 @@ tel.: (8142) 766312
 Студент\\
 Математический факультет\\ 
 Петрозаводский государственный университет\\
-пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+пр. Ленина, 33, Петрозаводск, Республика Карелия\\
 тел.: (8142) 711078\\
 эл. почта: nikita@nikita.tv
 
@@ -443,7 +444,7 @@ tel.: (8142) 766312
 
 \authorsname{Korzhitsky, Nikita}
 Petrozavodsk State University\\
-33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: nikita@nikita.tv 
 \end{aboutauthors}
@@ -470,7 +471,7 @@ tel.: (8142) 766312
 Студент\\
 Математический факультет\\ 
 Петрозаводский государственный университет\\
-пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+пр. Ленина, 33, Петрозаводск, Республика Карелия\\
 тел.: (8142) 711078\\
 эл. почта: alexander.pilinovich@yandex.ru
 
@@ -478,7 +479,7 @@ tel.: (8142) 766312
 
 \authorsname{Pilinovich, Aleksander}
 Petrozavodsk State University\\
-33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: alexander.pilinovich@yandex.ru 
 \end{aboutauthors}
@@ -488,7 +489,7 @@ e-mail: alexander.pilinovich@yandex.ru
 Студентка\\
 Математический факультет\\ 
 Петрозаводский государственный университет\\
-пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+пр. Ленина, 33, Петрозаводск, Республика Карелия\\
 тел.: (8142) 711078\\
 эл. почта: syawenka@mail.ru
 
@@ -496,7 +497,7 @@ e-mail: alexander.pilinovich@yandex.ru
 
 \authorsname{Sikhonina, Irina}
 Petrozavodsk State University\\
-33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: syawenka@mail.ru 
 \end{aboutauthors}
@@ -506,7 +507,7 @@ e-mail: syawenka@mail.ru
 Студентка\\
 Математический факультет\\ 
 Петрозаводский государственный университет\\
-пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+пр. Ленина, 33, Петрозаводск, Республика Карелия\\
 тел.: (8142) 711078\\
 эл. почта: annspirkova@gmail.com
 
@@ -514,7 +515,7 @@ e-mail: syawenka@mail.ru
 
 \authorsname{Spirkova, Anna}
 Petrozavodsk State University\\
-33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: annspirkova@gmail.com
 \end{aboutauthors}
@@ -541,7 +542,7 @@ e-mail: stark\_val@mail.ru
 Студентка\\
 Математический факультет\\ 
 Петрозаводский государственный университет\\
-пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+пр. Ленина, 33, Петрозаводск, Республика Карелия\\
 тел.: (8142) 711078\\
 эл. почта: hogdp@mail.ru
 
@@ -549,7 +550,7 @@ e-mail: stark\_val@mail.ru
 
 \authorsname{Stepkina, Tatiana}
 Petrozavodsk State University\\
-33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: hogdp@mail.ru
 \end{aboutauthors}
@@ -559,7 +560,7 @@ e-mail: hogdp@mail.ru
 %Студент\\
 %Математический факультет\\ 
 %Петрозаводский государственный университет\\
-%пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+%пр. Ленина, 33, Петрозаводск, Республика Карелия\\
 %тел.: (8142) 711078\\
 %эл. почта: tkachkras@gmail.com
 %
@@ -567,7 +568,7 @@ e-mail: hogdp@mail.ru
 %
 %\authorsname{Tkach, Stanislav}
 %Petrozavodsk State University\\
-%33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+%33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 %tel.: (8142) 711078\\
 %e-mail: tkachkras@gmail.com 
 %\end{aboutauthors}
@@ -611,7 +612,7 @@ e-mail: chuharev@krc.karelia.ru
 Студентка\\ 
 Математический факультет\\ 
 Петрозаводский государственный университет\\
-пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+пр. Ленина, 33, Петрозаводск, Республика Карелия\\
 тел: (8142) 711078\\
 эл. почта: da\_sha1078@mail.ru
 
@@ -619,7 +620,7 @@ e-mail: chuharev@krc.karelia.ru
 
 \authorsname{Shorets, Daria}
 Petrozavodsk State University\\
-33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: da\_sha1078@mail.ru
 \end{aboutauthors}
@@ -629,7 +630,7 @@ e-mail: da\_sha1078@mail.ru
 Студентка\\ 
 Математический факультет\\ 
 Петрозаводский государственный университет\\
-пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+пр. Ленина, 33, Петрозаводск, Республика Карелия\\
 тел:(8142) 711078\\
 эл. почта: kate.rysh@gmail.com
 
@@ -637,7 +638,7 @@ e-mail: da\_sha1078@mail.ru
 
 \authorsname{Yaryshkina, Ekaterina}
 Petrozavodsk State University\\
-33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: kate.rysh@gmail.com 
 \end{aboutauthors_without_page_numbering}
@@ -647,7 +648,7 @@ e-mail: kate.rysh@gmail.com
 Студентка\\ 
 Математический факультет\\ 
 Петрозаводский государственный университет\\
-пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+пр. Ленина, 33, Петрозаводск, Республика Карелия\\
 тел: (8142) 711078\\
 эл. почта: dyankevic@gmail.com
 
@@ -655,7 +656,7 @@ e-mail: kate.rysh@gmail.com
 
 \authorsname{Yankevich, Daria}
 Petrozavodsk State University\\
-33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
 e-mail: dyankevic@gmail.com
 \end{aboutauthors_without_page_numbering}
