--- a/wsd_part1/wsd_part1_temp_with_transliterated_references.tex
+++ b/wsd_part1/wsd_part1_temp_with_transliterated_references.tex
@@ -18,7 +18,7 @@
 
 \begin{document}
 
-\procname{Труды Карельского научного центра РАН\\ \No~10. 2015. С.~1--27}
+\procname{Труды Карельского научного центра РАН\\ \No 0. 2015. С.~1--28}
 \udk{УДК 81.32}
 
 \rustitle{Обзор методов и алгоритмов разрешения \newline лексической многозначности: Введение}
@@ -170,29 +170,29 @@ This paper is licensed under the CC Attribution license.}
  
  \newpage
  
-\begin{thebibliography}{9}
+\begin{thebibliographyen}{9}
 
 \bibitem{Averin 2006}
-\textit{Аверин А. Н.} Разработка сервиса поиска биграмм // Труды международной конференции <<Корпусная лингвистика 2006>>. СПб., С.Петерб. ун-та., 2006. С. 5--15.
+\textit{Averin A. N.} Razrabotka servisa poiska bigramm [Developing a search engine for bigrams]. // Trudy mezhdunarodnoj konferencii <<Korpusnaja lingvistika 2006>> [Proceedings of the International Conference <<Corpus linguistics 2006>>]. St.~Petersburg: St.~Peterb. un-t, 2006. P.~5--15.
 
 \bibitem{epr:website}
-\textit{Епрев А. С.} Применение контекстных векторов в классификации текстовых документов // 
-Журнал радиоэлектроники. 2010. N~10. URL: http://jre.cplire.ru/iso/oct10/1/text.html (дата обращения: 21.08.2015).
+\textit{Eprev A. S.} Primenenie kontekstnyh vektorov v klassifikacii tekstovyh dokumentov [Applications of context vectors in classification of text documents]. // 
+Zhurnal radiojelektroniki [Journal of radio electronics]. 2010. N~10. URL: http://jre.cplire.ru/iso/oct10/1/text.html (accessed: 21.08.2015).
 
 \bibitem{Kim 1989}
-\textit{Ким~Дж.~О., Мьюллер~Ч.~У., Клекка~У.~Р.} Факторный, дискриминантный и кластерный анализ. М.: Финансы и статистика, 1989. С.~172.
+\textit{Kim~G.~O., M'juller~Ch.~U., Klekka~U.~R.} Faktornyj, diskriminantnyj i klasternyj analiz [Factorial, discriminant and cluster analysis]. Moscow: Finansy i statistika, 1989. P.~172.
 
 \bibitem{Lukash 2011}
-\textit{Лукашевич Н. В.} Тезаурусы в задачах информационного поиска. М.: МГУ, 2011. 495 с.
+\textit{Loukachevitch N. V.} Tezaurusy v zadachah informacionnogo poiska [Thesauri in information retrieval tasks]. Moscow: MSU, 2011. 495 p.
 
 \bibitem{Marmanis}
-\textit{Марманис~Х., Бабенко Д.} Алгоритмы интеллектуального Интернета. Передовые методики сбора, анализа и обработки данных. / Пер. с англ. СПб.: Символ-Плюс, 2011. 480~с.
+\textit{Marmanis~H., Babenko D.} Algoritmy intellektual'nogo Interneta. Peredovye metodiki sbora, analiza i obrabotki dannyh [Algorithms of the intelligent Web. Advanced methods of data collection, analysis and processing]. St.~Petersburg: Simvol-Plyus, 2011. 480~p.
 
 \bibitem{Paclin}
-\textit{Паклин~Н.~Б., Орешков~В.~И.} Бизнес-аналитика: от данных к знаниям: Учебное пособие. 2-е изд., испр. СПб.: Питер, 2013. 704~с.
+\textit{Paklin~N.~B., Oreshkov~V.~I.} Biznes-analitika: ot dannyh k znanijam: Uchebnoe posobie. 2-e izd., ispr. [Business analytics: from data to knowledge. Tutorial]. St.~Petersburg: Piter, 2013. 704~p.
 
 \bibitem{Trudakov 2010}
-\textit{Турдаков Д. Ю.} Методы и программные средства разрешения лексической многозначности терминов на основе сетей документов: дис. \ldots\ канд. ф.-м. наук:  Москва, 2010.  138 c.
+\textit{Turdakov D. Yu.} Metody i programmnye sredstva razreshenija leksicheskoj mnogoznachnosti terminov na osnove setej dokumentov [Methods and software tools for resolving lexical ambiguity of terms based on the network of documents]: dis. \ldots\ kand. f.-m. nauk [Ph.~D. thesis, phys.-math.].  Moscow, 2010. 138~c.
 
 \bibitem{Abney 1999}
 \textit{Abney S., Light M.} Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999.
@@ -389,7 +389,7 @@ Machine Learning, 1999. Vol.~37, N.~3. P.~297--336.
 \bibitem{Zhao 2002}
 \textit{Zhao~Y., Karypis~G.} Evaluation of hierarchical clustering algorithms for document datasets // In Proceedings of the 11th International Conference on Information and Knowledge Management, McLean, VA, 2002. P. 515--524. doi: 10.1145/584792.584877
 
-\end{thebibliography}
+\end{thebibliographyen}
 \end{articletext}
 
 
